refactor(auth): convert AuthCookieFactory and StompAuthChannelInterceptor to records
Both are stateless Spring @Components with a single dependency and no
mutable state, so they match CLAUDE.md rule #5 (prefer records for
stateless beans). Aligns with AuthController which is already a record.
WebSocketAuthConfig stays a class because @Configuration classes are
CGLIB-proxied.

Also switches the Collectors.toList() collector to Stream.toList() in
the interceptor — same result, one less import, unmodifiable by default.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>